<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/enter_the_question"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBoxOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_option_1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBoxOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_option_2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBoxOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_option_3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBoxOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_option_4"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>