<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/fab_margin"
                android:background="@drawable/white_circle_background"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/s"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imgBtnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_gravity="end"
            android:background="@color/colorWhite"
            android:contentDescription="@string/more"
            app:srcCompat="@drawable/ic_action_vertical" />
    </FrameLayout>

</androidx.cardview.widget.CardView>