<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".fragments.PersonalInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <fragment
            android:id="@+id/fragmentTitle"
            android:name="com.psygon.tech.scholar.fragments.TitleFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_action_user"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/name"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/name"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/email"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/email"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/user_id"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etUserID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/user_id"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>